assert-struct/tests/snapshots/index_operations__chained_index_field_mismatch.snap
---
source: assert-struct/tests/index_operations.rs
expression: message
---
error: assert_struct! failed
  --> assert-struct/tests/index_operations_errors/chained_index_field_mismatch.rs:25:27
   |
25 |         items[0].tags[0]: "python",  // Should be "rust", will fail
   |                           ^^^^^^^^ got "rust"
